trunk/Archive2/95/d333240448e502/output
main.cpp:96:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
main.cpp:268:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
main.cpp:309:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
